# MovieRecommendation

./: .gitignore  IMDB_DTO.py  Makefile  README.md  docker-compose.yml  exceptions.py  imdb_recommendation.ipynb  main.py
config/postgres/: .env.example
protos/: recommender.proto
recommender/: Dockerfile  config.py  main.py  pyproject.toml  recommend.py
recommender/proto/: recommender_pb2.py  recommender_pb2.pyi  recommender_pb2_grpc.py
server/: Dockerfile  go.mod  go.sum  main.go
server/cmd/: download.go  filter.go  root.go  serve.go
server/pkg/config/: config.go
server/pkg/dto/: download.go  extract.go  filter.go  models.go  vector.go
server/pkg/handlers/: imdb.go  responses.go
server/pkg/proto/: recommender.pb.go  recommender_grpc.pb.go
server/pkg/storage/postgresql/: db.go
server/pkg/storage/postgresql/migrations/: 000001_imdb_table.down.sql  000001_imdb_table.up.sql
server/pkg/storage/postgresql/repository/: imdb.go
server/pkg/templates/: index.html
server/pkg/utils/: env.go  file.go  validation.go
